# AIWorks

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  architecture.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: agentic-architecture.mdc  code-style.mdc  commands-and-workflow.mdc
.cursor/skills/: design.md
.deepeval/: .deepeval_telemetry.txt
agents/content_curator/: curls.md  graph.py  main.py  models.py
agents/content_ingestion/: graph.py  main.py  models.py
agents/templates/: matcher_graph.py  matcher_main.py  matcher_models.py  scraper_graph.py  scraper_main.py  scraper_models.py
app/: main.py
app/api/: admin_routes.py  execute_routes.py  ingestion_routes.py
app/core/: config.py  db.py  execution_engine.py  langfuse_logs.py  langfuse_setup.py  logging.py  orchestrator.py  tenant_db.py
app/eval/: __init__.py  inline_judge.py  langfuse_inline.py  output_text.py  storage.py
app/guardrails/: __init__.py  audit.py  exceptions.py  input_filters.py  output_filters.py  tool_policies.py
app/orchestration/: planner.py
db/migrations/: 001_schema.sql  002_tenant_policies.sql  004_personas.sql  (+3 more)
docker/: compose.env.example  init-db.sh
docs/: AGENTIC_ARCHITECTURE.md  CONTENT_CURATION_POC.md  CONTENT_INGESTION_JOB.md  IMPLEMENTATION_PLAN.md  SYSTEM_DOC_UPDATED.md
scripts/: clean_tenant_content.py  register_agents.py  seed_content_tenants.py
tests/: conftest.py  test_eval_output_text.py
web/: .env.local.example  .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
(+47 files in other folders)
